# ros_splishsplash_integration

./: .gitignore  README.md  pool_with_falling_box.sdf
Custom Gazebo Models/Drone/: model.config  model.sdf
Gazebo_plugins/: CMakeLists.txt  README.md  RotorWrenchPlugin.cc  package.xml
Multi_drone_gazebo_plugin/: CMakeLists.txt  package.xml
Multi_drone_gazebo_plugin/src/: MultiDronePlugin.cc  pose_publisher_node.cpp
scripts/: configure_ros_gazebo_local.sh  install_base.sh  install_base.sh.bak  install_gazebo.sh  install_ignition_math.sh  install_iq_gnc.sh  install_iq_sim.sh  install_px4.sh  install_ros.sh  install_ruby.sh  install_sdformat.sh  install_splishsplash.sh  manage_bashrc_config.sh  setup_environment.sh  update_packages.sh  update_repo.sh  verify_custom_radius.sh
test files/: BoxDamBreak.sdf
test files/PX4-Autopilot/launch/: multi_uav_custom.launch  single_uav_pool.launch
test files/SPlisHSPlasH/GazeboFluidSimulator/: FluidSimulator.cpp  FluidSimulator.h  GazeboBoundarySimulator.cpp  GazeboBoundarySimulator.h  GazeboExporterRegistration.cpp  GazeboRigidBody.h  GazeboSceneConfiguration.cpp  GazeboSceneConfiguration.h  GazeboSceneLoader.cpp  GazeboSceneLoader.h  GazeboSimulatorBase.cpp  GazeboSimulatorBase.h
test files/iq_gnc/scripts/: calculate_inertia.py  error_plotter.py  plot_adaptive_and_trajectory.py
test files/iq_gnc/src/: base_node.h  circle.cpp  circle_ardupilot.cpp  follower_node1.cpp  follower_node2.cpp  follower_node3.cpp  follower_node4.cpp  leader_node.cpp
