<?xml version="1.0"?>
<package format="2">
  <name>multi_drone_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>Plugin para controlar múltiples drones en Gazebo mediante ROS 1</description>

  <maintainer email="tu_email@ejemplo.com">Tu Nombre</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>
</package>

